created main pages

--- a/house-data.html
+++ b/house-data.html
@@ -13,7 +13,7 @@
 
 <!-- for the navs: nav pills and nav tabs, flex   -->
 
-<body class="container" id="top">
+<body class="container">
 
     <div class="container floating">
 
@@ -51,17 +51,20 @@
 
     <section class="card">
         <div class="card-body">
-            <h2 classs="card-title">Senators</h2>
+            <h2 classs="card-title">Congressmen</h2>
             <p class="card-text">
-                First convened in 1789, the composition and powers of the Senate are
-                established in Article One of the U.S. Constitution. Each state is
-                represented by two senators, regardless of population, who serve staggered
-                six-year terms. The Senate has several exclusive powers not granted to the
-                House, including consenting to treaties as a precondition to their
-                ratification and consenting to or confirming appointments of Cabinet
-                secretaries, federal judges, other federal executive officials, military
-                officers, regulatory officials, ambassadors, and other federal uniformed
-                officers, as well as trial of federal officials impeached by the House.
+                The major power of the House is to pass federal legislation that affects the entire country, although
+                its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming
+                law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each
+                chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials
+                (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case
+                there is no majority in the Electoral College.
+
+                <br>
+                <br>
+
+                Each U.S. state is represented in the House in proportion to its population as measured in the census,
+                but every state is entitled to at least one representative.
             </p>
         </div>
     </section>
@@ -75,7 +78,7 @@
     </thead>
     <table class="table " id="tabledata">
         <tr>
-            <th id="test">Senator</th>
+            <th id="test">House</th>
             <th>Party
                 <form action="" method="">
                     <div>
@@ -88,6 +91,7 @@
 
                     </div>
                 </form>
+            </th>
             <th>
                 State
                 <form name="filter" id="FilterForm" action="" method="">
@@ -156,12 +160,9 @@
         <tbody></tbody>
     </table>
 
-
-
     <div class="top">
         <a href="#top">Back to the top</a>
     </div>
-
 
     <footer class="page-footer font-small blue">
         <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
@@ -175,7 +176,7 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <script src="./js/pro-congress-113-senate.js"></script>
+    <script src="./js/pro-congress-113-house.js"></script>
     <script src="./js/main.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
