--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<!-- for the navs: nav pills and nav tabs, flex   -->
 
 <body class="container">
-
-  <div class="container floating">
-
-    <img src="./Image/tgif-logo.png" alt="man with magnifying glass">
-
-    <h2>Transparent Government in Fact</h2>
-
-    <a href="mailto:info@tgif.net" target="_top"><i class="fa fa-envelope"></i> info@tgif.net</a>
+  <div class="row ">
+    <div class="col-md-3 col-sm-6 mb-30px">
+      <img src="./image/tgif-logo.png" alt="man with magnifying glass">
+    </div>
+    <div class="col-md-9 col-sm-6 align-self-center pull-left">
+      <h1>Transparent Government in Fact</h1>
+    </div>
+  </div>
+  <div class="row justify-content-end">
+    <div class="col-md-2 col-sm-2">
+      <a class="email" href="mailto:info@tgif.net" target="_top"><i class="fa fa-envelope"></i> info@tgif.net</a>
+    </div>
   </div>
 
-  <nav class="navbar">
-    <a class="nav-link nav-item" href="./index.html">Home</a>
-    <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
-    <a class="nav-link nav-item" href="./house-data.html">House</a>
 
 
+  <nav class="navbar navbar-expand-sm navbar-light bg-light nav-tabs">
 
+    <a href="./index.html" class="navbar nav-item nav-link  active ">Home</a>
+    <!-- <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
+    <a class="nav-link nav-item" href="./house-data.html">House</a> -->
 
     <div class="dropdown">
 
@@ -38,8 +42,30 @@
         aria-expanded="false" href="#">Congress 113</a>
 
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Senate</a>
-        <a class="dropdown-item" href="#">House</a>
+        <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
+        <a class="nav-link nav-item" href="./house-data.html">House</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+
+      <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown" aria-haspopup="true"
+        aria-expanded="false" href="#">Attendance</a>
+
+      <div class="dropdown-menu">
+        <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
+        <a class="nav-link nav-item" href="./house-data.html">House</a>
+      </div>
+    </div>
+
+    <div class="dropdown">
+
+      <a class="nav-item nav-link dropdown-toggle" data-toggle="dropdown" id="Congress113Dropdown" aria-haspopup="true"
+        aria-expanded="false" href="#">Party Loyalty</a>
+
+      <div class="dropdown-menu">
+        <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
+        <a class="nav-link nav-item" href="./house-data.html">House</a>
       </div>
     </div>
   </nav>
@@ -48,58 +74,78 @@
   <section class="card">
     <div class="card-body">
       <h2></h2>
-      <p class="card-text">
-        <h1>About Us</h1>
+      <h1>About Us</h1>
+      <p class="text-justify">
         Openness, accountability, and honesty define government transparency. In a free society, transparency is
-        government's obligation to share information with citizens. It is at the heart of how citizens hold their public
-        officials accountable. Here at TGIF we believe that government should be transparent.
+        government's obligation to share information with citizens. It is at the heart of how citizens hold their
+        public officials accountable. Here at TGIF we believe that government should be transparent.
+      </p>
+
+      <p class="text-justify">
         Governments exist to serve the people. Information on how officials conduct the public business and spend
         taxpayer money must be readily available and easily understood. This transparency allows good and just
         governance. Transparency promotes accountability and provides information for citizens about what their
         Government is doing.
+      </p>
 
+      <p class="text-justify">
         We also believe that government should be participatory. Public engagement enhances the Government's
         effectiveness and improves the quality of its decisions. Knowledge is widely dispersed in society, and public
         officials benefit from having access to that dispersed knowledge. We invite you to use our site to become
         actively engaged in American government.
-
-        TGIF works to disclose information in forms that the public can readily find and use. We solicit public feedback
-        to identify information of greatest use to the public.
       </p>
 
-      <button class="btn btn-primary" data-toggle="collapse" data-target="history">Read more</button>
-      <!-- Toggle the button between read more and read less -->
+      <p class="text-justify">
 
-      <div id="history" class="collapse">
+        TGIF works to disclose information in forms that the public can readily find and use. We solicit public
+        feedback
+        to identify information of greatest use to the <span id="dots">public.</span>
+      </p>
 
-        <h2>Background History of Government Transparency</h2>
 
-        In the West, the idea that government should be open to public scrutiny and susceptible to public opinion dates
-        back at least to the time of the Enlightenment, when many philosophes made an attack on absolutist doctrine of
-        state secrecy, a core part of their intellectual project. The passage of formal legislative instruments to this
-        end can also be traced to this time with Sweden, for example, (which then included Finland as a Swedish-governed
-        territory) enacting free press legislation as part of its constitution (Freedom of the Press Act, 1766). This
-        approach, and that of the philosophes more broadly, is strongly related to recent historiography on the
-        eighteenth-century public sphere.
 
-        Influenced by Enlightenment thought, the revolutions in America (1776) and France (1789), freedom of the press
-        enshrined provisions and requirements for public budgetary accounting and freedom of the press in constitutional
-        articles. In the nineteenth century, attempts by Metternichean statesmen to row back on these measures were
-        vigorously opposed by a number of eminent liberal politicians and writers, Bentham, Mill and Acton prominent
-        among the latter.
+      <div>
 
-        Open government is widely seen to be a key hallmark of contemporary democratic practice and is often linked to
-        the passing of freedom of information legislation. Scandinavian countries claim to have adopted the first
-        freedom of information legislation, dating the origins of its modern provisions to the eighteenth century and
-        Finland continuing the presumption of openness after gaining independence in 1917, passing its Act on Publicity
-        of Official Documents in 1951 (superseded by new legislation in 1999).
+        <button type="button" onclick="myFunction()" class="btn btn-info" id="myBtn" data-toggle="collapse"
+          data-target="#history">Read more</button>
+        <div id="history" class="collapse">
+          <span id="more">
+            <h2 class="history">Background History of Government Transparency</h2>
+            <p class="text-justify">
+              In the West, the idea that government should be open to public scrutiny and susceptible to public opinion
+              dates back at least to the time of the Enlightenment, when many philosophes made an attack on absolutist
+              doctrine of state secrecy, a core part of their intellectual project. The passage of formal legislative
+              instruments to this end can also be traced to this time with Sweden, for example, (which then included
+              Finland as a Swedish-governed territory) enacting free press legislation as part of its constitution
+              (Freedom of the Press Act, 1766). This approach, and that of the philosophes more broadly, is strongly
+              related to recent historiography on the eighteenth-century public sphere.
+            </p>
 
-        The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information Acts (AIAs)
-        or equivalent laws were passed in Denmark and Norway in 1970.
+            <p class="text-justify">
+              Influenced by Enlightenment thought, the revolutions in America (1776) and France (1789), freedom of the
+              press enshrined provisions and requirements for public budgetary accounting and freedom of the press in
+              constitutional articles. In the nineteenth century, attempts by Metternichean statesmen to row back on
+              these measures were vigorously opposed by a number of eminent liberal politicians and writers, Bentham,
+              Mill and Acton prominent among the latter.
+            </p>
+
+            <p class="text-justify">
+              Open government is widely seen to be a key hallmark of contemporary democratic practice and is often
+              linked to the passing of freedom of information legislation. Scandinavian countries claim to have adopted
+              the first freedom of information legislation, dating the origins of its modern provisions to the
+              eighteenth century and Finland continuing the presumption of openness after gaining independence in 1917,
+              passing its Act on Publicity of Official Documents in 1951 (superseded by new legislation in 1999).
+            </p>
+
+            <p class="text-justify">
+              The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information Acts
+              (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.
+            </p>
+
+          </span>
+        </div>
       </div>
-
-
-
+    </div>
 
 
     </div>
@@ -118,12 +164,20 @@
 
 
 
+
   <!-- <pre id="senate-data"></pre> -->
 
-  <script src="/Users/christianbaidoo/Desktop/TGIF/js/pro-congress-113-senate.js"></script>
-  <script src="/Users/christianbaidoo/Desktop/TGIF/main.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <script src="./js/pro-congress-113-senate.js"></script>
+  <script src="./js/main.js"></script>
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"> </script>
 </body>
 
 </html>
