created the senate at a glance table

--- a/house-attendance.html
+++ b/house-attendance.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Senate</title>
+    <title>House Attendance</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -93,9 +93,10 @@
     <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
     <!-- table-striped table hover -->
 
+    <thead class="thead-light">
 
-    <table class="table table-bordered table-striped">
-
+    </thead>
+    <table class="table" id="tabledata">
         <tr>
             <th id="test">Senator</th>
             <th>Party
@@ -174,9 +175,8 @@
             <th>Percentage of Votes</th>
         </tr>
         </thead>
-        <tbody id="tabledata">
 
-        </tbody>
+        <tbody></tbody>
     </table>
 
 
