--- a/house-data.html
+++ b/house-data.html
@@ -50,8 +50,8 @@
                 aria-haspopup="true" aria-expanded="false" href="#">Attendance</a>
 
             <div class="dropdown-menu">
-                <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
-                <a class="nav-link nav-item" href="./house-data.html">House</a>
+                <a class="nav-link nav-item" href="./senate-attendance.html">Senate</a>
+                <a class="nav-link nav-item" href="./house-attendance.html">House</a>
             </div>
         </div>
 
@@ -61,8 +61,8 @@
                 aria-haspopup="true" aria-expanded="false" href="#">Party Loyalty</a>
 
             <div class="dropdown-menu">
-                <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
-                <a class="nav-link nav-item" href="./house-data.html">House</a>
+                <a class="nav-link nav-item" href="./senate-party-loyalty.html">Senate</a>
+                <a class="nav-link nav-item" href="./house-party-loyalty.html">House</a>
             </div>
         </div>
     </nav>
@@ -95,9 +95,11 @@
     <thead class="thead-light">
 
     </thead>
-    <table class="table " id="tabledata">
+
+    <table class="table table-bordered table-striped">
+
         <tr>
-            <th id="test">House</th>
+            <th>House</th>
             <th>Party
                 <form action="" method="">
                     <div>
@@ -176,7 +178,8 @@
         </tr>
         </thead>
 
-        <tbody></tbody>
+        <tbody id="tabledata">
+        </tbody>
     </table>
 
     <div class="top">
