--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         aria-expanded="false" href="#">Attendance</a>
 
       <div class="dropdown-menu">
-        <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
-        <a class="nav-link nav-item" href="./house-data.html">House</a>
+        <a class="nav-link nav-item" href="./senate-attendance.html">Senate</a>
+        <a class="nav-link nav-item" href="./house-attendance.html">House</a>
       </div>
     </div>
 
@@ -64,8 +64,8 @@
         aria-expanded="false" href="#">Party Loyalty</a>
 
       <div class="dropdown-menu">
-        <a class="nav-link nav-item" href="./senate-data.html">Senate</a>
-        <a class="nav-link nav-item" href="./house-data.html">House</a>
+        <a class="nav-link nav-item" href="./senate-party-loyalty.html">Senate</a>
+        <a class="nav-link nav-item" href="./house-party-loyalty.html">House</a>
       </div>
     </div>
   </nav>
