I've created the house attendance page

--- a/house-attendance.html
+++ b/house-attendance.html
@@ -74,18 +74,95 @@
 
     <section class="card">
         <div class="card-body">
-            <h2 classs="card-title">Senators</h2>
-            <p class="card-text">
-                First convened in 1789, the composition and powers of the Senate are
-                established in Article One of the U.S. Constitution. Each state is
-                represented by two senators, regardless of population, who serve staggered
-                six-year terms. The Senate has several exclusive powers not granted to the
-                House, including consenting to treaties as a precondition to their
-                ratification and consenting to or confirming appointments of Cabinet
-                secretaries, federal judges, other federal executive officials, military
-                officers, regulatory officials, ambassadors, and other federal uniformed
-                officers, as well as trial of federal officials impeached by the House.
-            </p>
+
+            <div class="row ">
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <h4>Attendance</h4>
+                    <p>
+                        The Constitution specifies that a majority of members constitutes a quorum to do business in
+                        each house. Representatives and senators rarely force the presence of a quorum by demanding
+                        quorum calls; thus, in most cases, debates continue even if a majority is not present.
+                    </p>
+
+                    <p>
+                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
+                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
+                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
+                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
+                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
+                    </p>
+
+                </div>
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="text-aling-right"></div>
+                    <h4>House at a glance</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number of Reps</th>
+                                <th class="column width_1">% Voted with Party</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Republicans</td>
+                                <td>46</td>
+                                <td>87.15 %</td>
+                            </tr>
+                            <tr>
+                                <td>Democrats</td>
+                                <td>57</td>
+                                <td>96.97 %</td>
+                            </tr>
+                            <tr>
+                                <td>Independents</td>
+                                <td>2</td>
+                                <td>95.18 %</td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td>105</td>
+                                <td>93.66 %</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+                </div>
+            </div>
+
+            <div class="row ">
+
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <p>
+                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
+                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
+                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
+                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
+                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
+                    </p>
+
+
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <p>
+                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
+                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
+                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
+                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
+                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
+                    </p>
+
+
+                </div>
+
+
+            </div>
+
         </div>
     </section>
 
