--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="row justify-content-end">
-    <div class="col-md-2 col-sm-2">
+    <div class="col-md-2 col-sm-2 pb-4">
       <a class="email" href="mailto:info@tgif.net" target="_top"><i class="fa fa-envelope"></i> info@tgif.net</a>
     </div>
   </div>
@@ -71,7 +71,7 @@
   </nav>
 
 
-  <section class="card">
+  <section class="card mb-30px">
     <div class="card-body">
       <h2></h2>
       <h1>About Us</h1>
@@ -106,7 +106,7 @@
 
       <div>
 
-        <button type="button" onclick="myFunction()" class="btn btn-info" id="myBtn" data-toggle="collapse"
+        <button type="button" onclick="showMoreOrLess()" class="btn btn-info" id="myBtn" data-toggle="collapse"
           data-target="#history">Read more</button>
         <div id="history" class="collapse">
           <span id="more">
@@ -141,7 +141,6 @@
               The United States passed its Freedom of Information Act (FOIA) in 1966, FOIAs, Access to Information Acts
               (AIAs) or equivalent laws were passed in Denmark and Norway in 1970.
             </p>
-
           </span>
         </div>
       </div>
@@ -154,8 +153,8 @@
 
 
 
-  <footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+  <footer class="page-footer font-small">
+    <div class="footer-copyright text-center py-4"> © 2019 Copyright: All Rights Reserved
     </div>
   </footer>
 
