--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Senate Attendance</title>
+    <title>Senate Party Loyalty</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<!-- for the navs: nav pills and nav tabs, flex   -->
 
 <body class="container" id="top">
 
@@ -25,7 +24,7 @@
         </div>
     </div>
     <div class="row justify-content-end">
-        <div class="col-md-2 col-sm-2">
+        <div class="col-md-2 col-sm-2 pb-4">
             <a class="email" href="mailto:info@tgif.net" target="_top"><i class="fa fa-envelope"></i> info@tgif.net</a>
         </div>
     </div>
@@ -67,10 +66,6 @@
             </div>
         </div>
     </nav>
-
-    <br>
-    <br>
-
 
     <section class="card">
         <div class="card-body">
@@ -141,13 +136,13 @@
 
 
 
-    <div class="top">
+    <div class="top pt-4">
         <a href="#top">Back to the top</a>
     </div>
 
 
-    <footer class="page-footer font-small blue">
-        <div class="footer-copyright text-center py-3"> &copy; 2019 Copyright: All Rights Reserved
+    <footer class="page-footer font-small mt-30">
+        <div class="footer-copyright text-center py-5"> © 2019 Copyright: All Rights Reserved
         </div>
     </footer>
 
@@ -156,11 +151,9 @@
 
 
 
-    <!-- <pre id="senate-data"></pre> -->
-
     <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
+    <script src="./js/statistics.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
