--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -133,6 +133,36 @@
 
                 </div>
             </div>
+
+            <div class="row ">
+
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <p>
+                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
+                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
+                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
+                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
+                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
+                    </p>
+
+
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <p>
+                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
+                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
+                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
+                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
+                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
+                    </p>
+
+
+                </div>
+
+
+            </div>
+
         </div>
     </section>
 
