worked on the statistics page

--- a/senate-data.html
+++ b/senate-data.html
@@ -93,6 +93,31 @@
     <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
     <!-- table-striped table hover -->
 
+    <form>
+        <input type="checkbox" id="republican">
+        <label for="republican">Republican</label>
+        <input type="checkbox" id="democrat">
+        <label for="democrat">Democrat</label>
+        <input type="checkbox" id="independent">
+        <label for="independent">Independent</label>
+
+
+        <!-- <div class="checkbox">
+            <label><input type="checkbox" value="">Option 1</label>
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="">Option 2</label>
+        </div>
+        <div class="checkbox disabled">
+            <label><input type="checkbox" value="" disabled>Option 3</label>
+        </div> -->
+    </form>
+
+    <!-- <div class="custom-control custom-checkbox custom-control-inline">
+        <input type="checkbox" class="custom-control-input" id="defaultInline1">
+        <label class="custom-control-label" for="defaultInline1">Testere 4</label>
+    </div> -->
 
     <table class="table table-bordered table-striped">
 
@@ -174,7 +199,7 @@
             <th>Percentage of Votes</th>
         </tr>
         </thead>
-        <tbody id="tabledata">
+        <tbody>
 
         </tbody>
     </table>
@@ -200,6 +225,9 @@
 
     <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script>
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
+
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
