--- a/house-attendance.html
+++ b/house-attendance.html
@@ -109,23 +109,23 @@
                         <tbody>
                             <tr>
                                 <td>Republicans</td>
-                                <td>46</td>
-                                <td>87.15 %</td>
+                                <td>240</td>
+                                <td>92.94 %</td>
                             </tr>
                             <tr>
                                 <td>Democrats</td>
-                                <td>57</td>
-                                <td>96.97 %</td>
+                                <td>210</td>
+                                <td>88.74 %</td>
                             </tr>
                             <tr>
                                 <td>Independents</td>
-                                <td>2</td>
-                                <td>95.18 %</td>
+                                <td>0</td>
+                                <td>0 %</td>
                             </tr>
                             <tr>
                                 <td>Total</td>
-                                <td>105</td>
-                                <td>93.66 %</td>
+                                <td>450</td>
+                                <td>90.98 %</td>
                             </tr>
                         </tbody>
                     </table>
@@ -170,91 +170,6 @@
     <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
     <!-- table-striped table hover -->
 
-    <thead class="thead-light">
-
-    </thead>
-    <table class="table" id="tabledata">
-        <tr>
-            <th id="test">Senator</th>
-            <th>Party
-                <form action="" method="">
-                    <div>
-                        <select id="party-filter">
-                            <option value="all">All</option>
-                            <option value="D">D</option>
-                            <option value="R">R</option>
-                            <option value="I">I</option>
-                        </select>
-
-                    </div>
-                </form>
-            <th>
-                State
-                <form name="filter" id="FilterForm" action="" method="">
-                    <div id="select-filter">
-                        <select id="state-filter" class="filter">
-                            <option value="all">All</option>
-                            <option value="AK">AK</option>
-                            <option value="AL">AL</option>
-                            <option value="AR">AR</option>
-                            <option value="AZ">AZ</option>
-                            <option value="CA">CA</option>
-                            <option value="CO">CO</option>
-                            <option value="CT">CT</option>
-                            <option value="DE">DE</option>
-                            <option value="FL">FL</option>
-                            <option value="GA">GA</option>
-                            <option value="HI">HI</option>
-                            <option value="IA">IA</option>
-                            <option value="ID">ID</option>
-                            <option value="IL">IL</option>
-                            <option value="IN">IN</option>
-                            <option value="KS">KS</option>
-                            <option value="KY">KY</option>
-                            <option value="LA">LA</option>
-                            <option value="MA">MA</option>
-                            <option value="MD">MD</option>
-                            <option value="ME">ME</option>
-                            <option value="MI">MI</option>
-                            <option value="MN">MN</option>
-                            <option value="MO">MO</option>
-                            <option value="MS">MS</option>
-                            <option value="MT">MT</option>
-                            <option value="NC">NC</option>
-                            <option value="ND">ND</option>
-                            <option value="NE">NE</option>
-                            <option value="NH">NH</option>
-                            <option value="NJ">NJ</option>
-                            <option value="NM">NM</option>
-                            <option value="NV">NV</option>
-                            <option value="NY">NY</option>
-                            <option value="OH">OH</option>
-                            <option value="OK">OK</option>
-                            <option value="OR">OR</option>
-                            <option value="PA">PA</option>
-                            <option value="RI">RI</option>
-                            <option value="SC">SC</option>
-                            <option value="SD">SD</option>
-                            <option value="TN">TN</option>
-                            <option value="TX">TX</option>
-                            <option value="UT">UT</option>
-                            <option value="VA">VA</option>
-                            <option value="VT">VT</option>
-                            <option value="WA">WA</option>
-                            <option value="WI">WI</option>
-                            <option value="WV">WV</option>
-                            <option value="WY">WY</option>
-                        </select>
-                    </div>
-                </form>
-            </th>
-            <th>Years in Office</th>
-            <th>Percentage of Votes</th>
-        </tr>
-        </thead>
-
-        <tbody></tbody>
-    </table>
 
 
 
@@ -275,8 +190,10 @@
 
     <!-- <pre id="senate-data"></pre> -->
 
-    <script src="./js/pro-congress-113-senate.js"></script>
+    <script src="./js/pro-congress-113-house.js"></script>
     <script src="./js/main.js"></script>
+    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
