--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -137,25 +137,78 @@
             <div class="row ">
 
                 <div class="col-md-6 col-sm-6 mb-30px">
-                    <p>
-                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
-                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
-                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
-                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
-                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
-                    </p>
+                    <h4>Least Engaged (Bottom 10% Attendance)</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number of Reps</th>
+                                <th class="column width_1">% Voted with Party</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Republicans</td>
+                                <td>46</td>
+                                <td>87.15 %</td>
+                            </tr>
+                            <tr>
+                                <td>Democrats</td>
+                                <td>57</td>
+                                <td>96.97 %</td>
+                            </tr>
+                            <tr>
+                                <td>Independents</td>
+                                <td>2</td>
+                                <td>95.18 %</td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td>105</td>
+                                <td>93.66 %</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
 
 
                 </div>
 
                 <div class="col-md-6 col-sm-6 mb-30px">
-                    <p>
-                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
-                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
-                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
-                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
-                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
-                    </p>
+                    <h4>Most Engaged (Bottom 10% Attendance)</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number of Reps</th>
+                                <th class="column width_1">% Voted with Party</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Republicans</td>
+                                <td>46</td>
+                                <td>87.15 %</td>
+                            </tr>
+                            <tr>
+                                <td>Democrats</td>
+                                <td>57</td>
+                                <td>96.97 %</td>
+                            </tr>
+                            <tr>
+                                <td>Independents</td>
+                                <td>2</td>
+                                <td>95.18 %</td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td>105</td>
+                                <td>93.66 %</td>
+                            </tr>
+                        </tbody>
+                    </table>
 
 
                 </div>
