--- a/senate-attendance.html
+++ b/senate-attendance.html
@@ -106,27 +106,8 @@
                                 <th class="column width_1">% Voted with Party</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Republicans</td>
-                                <td>46</td>
-                                <td>87.15 %</td>
-                            </tr>
-                            <tr>
-                                <td>Democrats</td>
-                                <td>57</td>
-                                <td>96.97 %</td>
-                            </tr>
-                            <tr>
-                                <td>Independents</td>
-                                <td>2</td>
-                                <td>95.18 %</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>105</td>
-                                <td>93.66 %</td>
-                            </tr>
+                        <tbody id="senate-attendance">
+
                         </tbody>
                     </table>
 
@@ -143,31 +124,12 @@
                         <thead>
                             <tr>
                                 <th class="column width_1">Party</th>
-                                <th class="column width_1">Number of Reps</th>
-                                <th class="column width_1">% Voted with Party</th>
+                                <th class="column width_1">Number of Missed Votes</th>
+                                <th class="column width_1">% Missed</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Republicans</td>
-                                <td>46</td>
-                                <td>87.15 %</td>
-                            </tr>
-                            <tr>
-                                <td>Democrats</td>
-                                <td>57</td>
-                                <td>96.97 %</td>
-                            </tr>
-                            <tr>
-                                <td>Independents</td>
-                                <td>2</td>
-                                <td>95.18 %</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>105</td>
-                                <td>93.66 %</td>
-                            </tr>
+                        <tbody id="least-engaged">
+
                         </tbody>
                     </table>
 
@@ -176,37 +138,18 @@
                 </div>
 
                 <div class="col-md-6 col-sm-6 mb-30px">
-                    <h4>Most Engaged (Bottom 10% Attendance)</h4>
+                    <h4>Most Engaged (Top 10% Attendance)</h4>
 
                     <table class="table table-bordered table-striped">
                         <thead>
                             <tr>
                                 <th class="column width_1">Party</th>
-                                <th class="column width_1">Number of Reps</th>
-                                <th class="column width_1">% Voted with Party</th>
+                                <th class="column width_1">Number of Missed Votes</th>
+                                <th class="column width_1">% Missed</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Republicans</td>
-                                <td>46</td>
-                                <td>87.15 %</td>
-                            </tr>
-                            <tr>
-                                <td>Democrats</td>
-                                <td>57</td>
-                                <td>96.97 %</td>
-                            </tr>
-                            <tr>
-                                <td>Independents</td>
-                                <td>2</td>
-                                <td>95.18 %</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>105</td>
-                                <td>93.66 %</td>
-                            </tr>
+                        <tbody tbody id="most-engaged">
+
                         </tbody>
                     </table>
 
@@ -236,10 +179,6 @@
 
 
 
-
-
-
-    <!-- <pre id="senate-data"></pre> -->
 
     <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script>
