--- a/senate-data.html
+++ b/senate-data.html
@@ -199,7 +199,7 @@
             <th>Percentage of Votes</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="tabledata">
 
         </tbody>
     </table>
