--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -74,9 +74,9 @@
                 <div class="col-md-6 col-sm-6 mb-30px">
                     <h4>Party Loyalty</h4>
                     <p>
-                        Those who consider themselves to be strong partisans, strong Democrats and strong Republicans
-                        respectively, tend to be the most faithful in voting for their party's nominee for office and
-                        legislation that backs their party's agenda.
+                        The Constitution specifies that a majority of members constitutes a quorum to do business in
+                        each house. Representatives and senators rarely force the presence of a quorum by demanding
+                        quorum calls; thus, in most cases, debates continue even if a majority is not present.
                     </p>
 
                     <p>
@@ -91,7 +91,7 @@
 
                 <div class="col-md-6 col-sm-6">
                     <div class="text-aling-right"></div>
-                    <h4>Senate at a glance</h4>
+                    <h4>House at a glance</h4>
 
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -101,36 +101,61 @@
                                 <th class="column width_1">% Voted with Party</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Republicans</td>
-                                <td>46</td>
-                                <td>87.15 %</td>
-                            </tr>
-                            <tr>
-                                <td>Democrats</td>
-                                <td>57</td>
-                                <td>96.97 %</td>
-                            </tr>
-                            <tr>
-                                <td>Independents</td>
-                                <td>2</td>
-                                <td>95.18 %</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>105</td>
-                                <td>93.66 %</td>
-                            </tr>
+                        <tbody id="senate-attendance">
+
                         </tbody>
                     </table>
 
 
                 </div>
             </div>
+
+            <div class="row ">
+
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <h4>Least Loyal (Bottom 10% Party)</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number Party Votes</th>
+                                <th class="column width_1">% Party Votes</th>
+                            </tr>
+                        </thead>
+                        <tbody id="least-loyal">
+
+                        </tbody>
+                    </table>
+
+
+
+                </div>
+
+                <div class="col-md-6 col-sm-6 mb-30px">
+                    <h4>Most Loyal (Top 10% Party)</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number Party Votes</th>
+                                <th class="column width_1">% Party Votes</th>
+                            </tr>
+                        </thead>
+                        <tbody tbody id="most-loyal">
+
+                        </tbody>
+                    </table>
+
+
+                </div>
+
+
+            </div>
+
         </div>
     </section>
-
 
 
 
