--- a/house-attendance.html
+++ b/house-attendance.html
@@ -96,7 +96,7 @@
 
                 <div class="col-md-6 col-sm-6">
                     <div class="text-aling-right"></div>
-                    <h4>House at a glance</h4>
+                    <h4>Senate at a glance</h4>
 
                     <table class="table table-bordered table-striped">
                         <thead>
@@ -106,27 +106,8 @@
                                 <th class="column width_1">% Voted with Party</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Republicans</td>
-                                <td>240</td>
-                                <td>92.94 %</td>
-                            </tr>
-                            <tr>
-                                <td>Democrats</td>
-                                <td>210</td>
-                                <td>88.74 %</td>
-                            </tr>
-                            <tr>
-                                <td>Independents</td>
-                                <td>0</td>
-                                <td>0 %</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>450</td>
-                                <td>90.98 %</td>
-                            </tr>
+                        <tbody id="senate-attendance">
+
                         </tbody>
                     </table>
 
@@ -137,25 +118,40 @@
             <div class="row ">
 
                 <div class="col-md-6 col-sm-6 mb-30px">
-                    <p>
-                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
-                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
-                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
-                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
-                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
-                    </p>
+                    <h4>Least Engaged (Bottom 10% Attendance)</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number of Missed Votes</th>
+                                <th class="column width_1">% Missed</th>
+                            </tr>
+                        </thead>
+                        <tbody id="least-engaged">
+
+                        </tbody>
+                    </table>
+
 
 
                 </div>
 
                 <div class="col-md-6 col-sm-6 mb-30px">
-                    <p>
-                        The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator
-                        stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for
-                        the most formal matters, as a roll-call of all 435 representatives takes quite some time;
-                        normally, members vote by electronic device. In the case of a tie, the motion in question fails.
-                        In the Senate, the Vice President may (if present) cast the tiebreaking vote.
-                    </p>
+                    <h4>Most Engaged (Top 10% Attendance)</h4>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th class="column width_1">Party</th>
+                                <th class="column width_1">Number of Missed Votes</th>
+                                <th class="column width_1">% Missed</th>
+                            </tr>
+                        </thead>
+                        <tbody tbody id="most-engaged">
+
+                        </tbody>
+                    </table>
 
 
                 </div>
