Created the filtering functionality for the party checkbox

--- a/house-data.html
+++ b/house-data.html
@@ -88,9 +88,17 @@
         </div>
     </section>
 
+    <form class="checkbox">
+        <input type="checkbox" id="republican" class="checkbox">
+        <label for="republican">Republican</label>
+        <input type="checkbox" id="democrat">
+        <label for="democrat">Democrat</label>
+        <input type="checkbox" id="independent">
+        <label for="independent">Independent</label>
+    </form>
 
-    <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
-    <!-- table-striped table hover -->
+
+
 
     <thead class="thead-light">
 
@@ -101,17 +109,7 @@
         <tr>
             <th>House</th>
             <th>Party
-                <form action="" method="">
-                    <div>
-                        <select id="party-filter">
-                            <option value="all">All</option>
-                            <option value="D">D</option>
-                            <option value="R">R</option>
-                            <option value="I">I</option>
-                        </select>
 
-                    </div>
-                </form>
             </th>
             <th>
                 State
@@ -180,7 +178,9 @@
 
         <tbody id="tabledata">
         </tbody>
+
     </table>
+
 
     <div class="top">
         <a href="#top">Back to the top</a>
