--- a/senate-data.html
+++ b/senate-data.html
@@ -93,25 +93,13 @@
     <!-- https://www.linkedin.com/learning/bootstrap-4-essential-training/table-styles-3 -->
     <!-- table-striped table hover -->
 
-    <form>
-        <input type="checkbox" id="republican">
+    <form class="checkbox">
+        <input type="checkbox" id="republican" class="checkbox">
         <label for="republican">Republican</label>
         <input type="checkbox" id="democrat">
         <label for="democrat">Democrat</label>
         <input type="checkbox" id="independent">
         <label for="independent">Independent</label>
-
-
-        <!-- <div class="checkbox">
-            <label><input type="checkbox" value="">Option 1</label>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="">Option 2</label>
-        </div>
-        <div class="checkbox disabled">
-            <label><input type="checkbox" value="" disabled>Option 3</label>
-        </div> -->
     </form>
 
     <!-- <div class="custom-control custom-checkbox custom-control-inline">
@@ -124,17 +112,7 @@
         <tr>
             <th id="test">Senator</th>
             <th>Party
-                <form action="" method="">
-                    <div>
-                        <select id="party-filter">
-                            <option value="all">All</option>
-                            <option value="D">D</option>
-                            <option value="R">R</option>
-                            <option value="I">I</option>
-                        </select>
 
-                    </div>
-                </form>
             <th>
                 State
                 <form name="filter" id="FilterForm" action="" method="">
@@ -206,6 +184,7 @@
 
 
 
+
     <div class="top">
         <a href="#top">Back to the top</a>
     </div>
@@ -225,7 +204,6 @@
 
     <script src="./js/pro-congress-113-senate.js"></script>
     <script src="./js/main.js"></script>
-    <script src="/Users/christianbaidoo/Desktop/TGIF/js/statistics.js"></script>
 
 
     <!-- Latest compiled and minified CSS -->
